# pyfrag_plot

./: .flake8  .gitignore  LICENSE-Siebe’s Laptop.txt  README-Siebe’s Laptop.md  README.md  config.html  general.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: config.doctree  environment.pickle  general.doctree  index.doctree  usage.doctree
.doctrees/api/: modules.doctree  pyfrag_plotter.config.doctree  pyfrag_plotter.doctree  pyfrag_plotter.input.doctree  pyfrag_plotter.plot.doctree
.github/workflows/: build_docs-Siebe’s Laptop.yml  build_docs.yml  pypi-publish.yml  test.yml
_modules/: index.html  pyfrag_plotter.html
_modules/pyfrag_plotter/: errors.html  interpolate.html  processing_funcs.html  pyfrag_object.html
_sources/: general.rst.txt  usage.rst.txt
_sources/api/: pyfrag_plotter.config.rst.txt  pyfrag_plotter.plot.rst.txt  pyfrag_plotter.rst.txt
_static/: example_user_config.ini
api/: modules.html  pyfrag_plotter.config.html  pyfrag_plotter.html  pyfrag_plotter.input.html  pyfrag_plotter.plot.html
docs/: conf.py  config.rst  general.rst  index-Siebe’s Laptop.rst  index.rst  modules.rst  plotter.rst  plotter.tests.rst  pyfrag_plot.pyfrag_plotter.plot.rst  pyfrag_plot.pyfrag_plotter.rst  pyfrag_plot.tests.rst  pyfrag_plotter.input-Siebe’s Laptop.rst  pyfrag_plotter.input.rst  pyfrag_plotter.interpolate.rst  pyfrag_plotter.plot.rst  pyfrag_plotter.printer.rst  pyfrag_plotter.rst  usage.rst
docs/_static/: tmp
example/: example_config.ini  example_interpolate.py  example_pyfrag_plotter-Siebe’s Laptop.ipynb  example_pyfrag_plotter-Siebe’s Laptop.py  example_pyfrag_plotter.ipynb  example_pyfrag_plotter.py
example/CGeN_Ethy/: CGeN_Ethy.in  (+2 more)
plotter/: file_func.py  input_reader.py  interpolate.py  plot_classes.py  plot_parameters.py  pyfrag_object.py  pyfrag_plotter.py
pyfrag_plotter/: __init__.py  config.ini  config_handler.py  errors.py  file_func.py  helper_funcs.py  interpolate.py  main.py  plot_parameters.py  processing_funcs.py  pyfrag_errors.py  pyfrag_object-Siebe’s Laptop.py  pyfrag_object.py
tests/: test_config.py  test_get_pyfrag_files.py  test_processing_data-Siebe’s Laptop.py  test_processing_data.py  test_read_inputfile.py
(+115 files in other folders)
