[build-system]
requires = ["setuptools==63.4.3", "wheel", "numpy>=1.25.0", "matplotlib>=3.7.1", "attrs>=21.2.0", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfrag_plotter"
authors = [
  { name="SiebeLeDe", email="s.j.lekanne.deprez@vu.nl" },
]
description = "Package for plotting pyfrag calculations using the AMS driver and plams"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]