[build-system]
requires = ["setuptools==63.4.3", "wheel"]
build-backend = "setuptools"

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


name = "pyfrag_plotter"
authors = [
  { name="SiebeLeDe", email="s.j.lekanne.deprez@vu.nl" },
]
description = "Package for plotting pyfrag calculations using the AMS driver and plams"
documentation = "https://siebelede.github.io/pyfrag_plot/"
repository = "https://github.com/SiebeLeDe/pyfrag_plot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
