[build-system]
requires = ["setuptools==63.4.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {command = "git describe --tags --long --dirty", replace = "-dirty", match = "v(.*)"}

[project]
dynamic = ["dependencies", "version"]
name = "pyfrag_plotter"
authors = [
  { name="SiebeLeDe", email="s.j.lekanne.deprez@vu.nl" },
]
description = "Package for plotting pyfrag calculations using the AMS driver and plams"
documentation = "https://siebelede.github.io/pyfrag_plot/"
repository = "https://github.com/SiebeLeDe/pyfrag_plot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
